https://bugs.webkit.org/show_bug.cgi?id=102970 [WK1] REGRESSION (r129545): Main frame doesn't rubberband unless WebFrameLoadDelegate implements -webView:didFirstLayoutInFrame:

Reviewed by Sam Weinig.

We should always register for DidFirstLayout in WK1 since we do work
at that time besides just calling the delegate function.
* WebView/WebView.mm:
(-[WebView _cacheFrameLoadDelegateImplementations]):



Canonical link: https://commits.webkit.org/121662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136033 268f45cc-cd09-0410-ab3c-d52691b4dbfc